feat: create swagger documentation add adjust maximum size file
